Fix border of postfix button on mobile

--- a/htdocs/scss/foundation/components/_forms.scss
+++ b/htdocs/scss/foundation/components/_forms.scss
@@ -359,6 +359,7 @@ $select-bg-color: #fafafa !default;
 
     /* Adjust padding, alignment and radius if pre/post element is a button */
     .postfix.button { @include button-size(false,false,false); @include postfix(false, false, true); }
+    @media #{$small-only} { .postfix.button { border-left: 1px solid $input-prefix-border-color; } }
     .prefix.button { @include button-size(false,false,false); @include prefix(false, false, true); }
 
     .prefix.button.radius { @include radius(0); @include side-radius(left, $button-radius); }
